--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
+        
         <section class="main">
             <a name="about"><h2 class="title">About</h2></a>
             <p>Connect is a web design agency founded to create beautiful interactive websites which users can enjoy to use.<br/>
@@ -53,7 +54,7 @@
             <img class="folio"src="shot-20151204-1874-1d1nydj.jpeg">
             <img class="folio"src="shot-20151204-1874-1689s2q.jpeg">
            <p>Other projects will be uploaded upon completion or can be viewed <a href="https://github.com/CKiilu">here</a>. </p>
-        </section>
+        </section><br/>
         <section class="clear">
             <a name="contact"><h2 class="title" id="con">Contact</h2></a>
             <p>Contact us at: contact@connectdesigns.com</p>
