--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a name="contact"><h2 class="title" id="con">Contact</h2></a>
             <p>Contact us at: contact@connectdesigns.com</p>
             <p>If you are interested in working together, fill in the form below:</p>
-            <form>
+            <form method="post">
                 <fieldset>
                     <legend>Customer Contact Information</legend>
                 <label>Name: </label>
