--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section class="main">
             <a name="portfolio"><h2 class="title">Portfolio</h2></a>
-            <p>Below is the project our agency has completed so far. The objective was to create an application to host African short stories. Click <a href="amkastories.bitballoon.com">here</a> to view the site. </p>
+            <p>Below is the project our agency has completed so far. The objective was to create an application to host African short stories. Click <a href="http://amkastories.bitballoon.com">here</a> to view the site. </p>
             <img class="folio"src="shot-20151204-1874-1gye3ed.jpeg">
             <img class="folio"src="shot-20151204-1874-1d1nydj.jpeg">
             <img class="folio"src="shot-20151204-1874-1689s2q.jpeg">
